Fixes to Positioning of chat background elements and Overflow, hiding the scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,12 @@
   overflow-x: hidden;
 }
 
+.App::-webkit-scrollbar {
+  display: none;
+}
+
 .BackgroundTextContainer {
-  position: absolute;
+  position: fixed;
   margin-left: auto;
   margin-right: auto;
   z-index: -1;
@@ -18,7 +22,7 @@
 }
 
 .BackgroundDisclaimer {
-  position: absolute;
+  position: fixed;
   z-index: -2;
   bottom: 65px;
   margin-left: auto;
