--- a/src/components/molecules/sendTextFooter/SendTextFooter.css
+++ b/src/components/molecules/sendTextFooter/SendTextFooter.css
@@ -22,10 +22,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
   padding: 10px;
 
 }
