--- a/src/components/organisms/header/Header.css
+++ b/src/components/organisms/header/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   position: sticky;
-  top: 20px;
+  top: 0;
   left: 0;
   justify-content: space-between;
   align-items: center;
@@ -10,4 +10,6 @@
   -webkit-box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
   box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
+  background: white; /* Make sure it has a background so content scrolls behind it */
+  z-index: 1000; /* Higher index so the header is above other content */
 }
